The hand-in version

--- a/initialization.ipynb
+++ b/initialization.ipynb
@@ -671,15 +671,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-13T20:12:41.873071Z",
-     "start_time": "2021-05-13T20:12:41.835172Z"
+     "end_time": "2021-05-14T14:02:10.165324Z",
+     "start_time": "2021-05-14T14:02:10.152370Z"
     },
-    "code_folding": [
-     8
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -690,10 +688,20 @@
     "            if (not attribute_name.startswith('__')\n",
     "                and not callable(getattr(obj, attribute_name)))}\n",
     "\n",
-    "# A function that will print a markdown text.\n",
+    "\n",
+    "# A function that returns a dict of object methods.\n",
+    "def get_obj_methods(obj):\n",
+    "    return {method_name: getattr(obj, method_name)\n",
+    "            for method_name in dir(obj)\n",
+    "            if (not method_name.startswith('__')\n",
+    "            and callable(getattr(obj, method_name)))}\n",
+    "\n",
+    "\n",
+    "# A function that prints a string in markdown format.\n",
     "def printmd(string):\n",
     "    display(Markdown(string))\n",
-    "    \n",
+    "\n",
+    "\n",
     "# A function that returns unique values from a text.\n",
     "def unique(list_):\n",
     "    return list(set(list_))"
@@ -1312,11 +1320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-13T20:12:42.071540Z",
-     "start_time": "2021-05-13T20:12:42.027658Z"
+     "end_time": "2021-05-14T14:11:21.567519Z",
+     "start_time": "2021-05-14T14:11:21.550565Z"
     },
     "code_folding": []
    },
@@ -1373,6 +1381,14 @@
     "            path_data_clean_root / 'cph_dwellings.pkl')\n",
     "        df_dwellings.attrs = {'name': 'Dwellings'}\n",
     "        self.dwellings = df_dwellings\n",
+    "    \n",
+    "    # Show the methods of the object:\n",
+    "    def show_methods(self):\n",
+    "        # Show the methods of the object cph_data.\n",
+    "        printmd('The methods of the object are:')\n",
+    "        display(pd.DataFrame(get_obj_methods(self).keys(),\n",
+    "                             columns=['Method names']))\n",
+    "        \n",
     "\n",
     "    # Gets dataframes with district information:\n",
     "    def get_dataframes_with_district(self):\n",
@@ -1404,7 +1420,7 @@
     "\n",
     "    # Gets the names of the dataframes in the object.\n",
     "    def get_dataframe_names(self):\n",
-    "        return [df.attrs['name'] for df in self.get_dataframes()]\n",
+    "        return [df.attrs['name'] for df in self.get_all_dataframes()]\n",
     "\n",
     "    # Displays the names of the dataframes in the object.\n",
     "    def display_dataframe_names(self):\n",
