--- a/website_main.ipynb
+++ b/website_main.ipynb
@@ -5,9 +5,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-05-13T20:57:38.128Z"
+     "end_time": "2021-05-14T16:13:50.993498Z",
+     "start_time": "2021-05-14T16:13:45.007892Z"
     },
-    "hide_input": false
+    "hide_input": true
    },
    "outputs": [],
    "source": [
@@ -19,7 +20,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-05-13T20:57:38.133Z"
+     "end_time": "2021-05-14T16:13:51.057329Z",
+     "start_time": "2021-05-14T16:13:50.996491Z"
     },
     "hide_input": true,
     "scrolled": true
@@ -71,6 +73,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction</a></span></li><li><span><a href=\"#The-population-is-being-replaced\" data-toc-modified-id=\"The-population-is-being-replaced-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>The population is being replaced</a></span><ul class=\"toc-item\"><li><span><a href=\"#Danes-vs-non-Danes,-2009-2020\" data-toc-modified-id=\"Danes-vs-non-Danes,-2009-2020-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Danes vs non-Danes, 2009-2020</a></span></li><li><span><a href=\"#Top-10-countries-of-origin\" data-toc-modified-id=\"Top-10-countries-of-origin-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Top 10 countries of origin</a></span></li></ul></li><li><span><a href=\"#The-districts-succumb\" data-toc-modified-id=\"The-districts-succumb-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>The districts succumb</a></span></li><li><span><a href=\"#Thank-you\" data-toc-modified-id=\"Thank-you-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Thank you</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -102,7 +114,7 @@
    "source": [
     "Mr. [Martin Henriksen](https://da.wikipedia.org/wiki/Martin_Henriksen) has a serious warning to the people of Denmark: the Danish population is being [replaced](https://ditoverblik.dk/martin-henriksen-advarer-befolkningen-udskiftes). Slowly, but steadily, the Danish nation is disappearing, and, if nothing is done, it will soon cease to exist. \n",
     "\n",
-    "The numbers presented in his article are truly horrifying: the foreigners or their [descendants](https://www.dst.dk/da/Statistik/emner/befolkning-og-valg/indvandrere-og-efterkommere/indvandrere-og-efterkommere) constituted already in 2019 23.7 % of the population in Denmark. Therefore, it is not difficult to imagine that 50 years from now, when many of the pure, noble Danes will have passed away, the country will be populated *solely* by the immigrants, their children, their children's children, their children's children's children, and their children's children's children's children.\n",
+    "The numbers presented in his article are truly horrifying: the foreigners or their [descendants](https://www.dst.dk/da/Statistik/emner/befolkning-og-valg/indvandrere-og-efterkommere/indvandrere-og-efterkommere) constituted already in 2019 23.7% of the population in Denmark. Therefore, it is not difficult to imagine that 50 years from now, when many of the pure, noble Danes will have passed away, the country will be populated *solely* by the immigrants, their children, their children's children, their children's children's children, and their children's children's children's children.\n",
     "\n",
     "But what about Copenhagen? Is there any hope left for the capital? Take my hand and let's take a closer look. "
    ]
@@ -126,9 +138,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-05-13T20:57:38.139Z"
+     "end_time": "2021-05-14T16:13:54.627921Z",
+     "start_time": "2021-05-14T16:13:51.060320Z"
     },
-    "hide_input": false
+    "hide_input": true
    },
    "outputs": [],
    "source": [
@@ -181,9 +194,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-05-13T20:57:38.143Z"
+     "end_time": "2021-05-14T16:13:57.745664Z",
+     "start_time": "2021-05-14T16:13:54.630911Z"
     },
-    "hide_input": false
+    "hide_input": true
    },
    "outputs": [],
    "source": [
@@ -211,7 +225,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-05-13T20:57:38.149Z"
+     "end_time": "2021-05-14T16:13:58.006125Z",
+     "start_time": "2021-05-14T16:13:57.747660Z"
     },
     "hide_input": true,
     "scrolled": false
@@ -242,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The districts\n",
+    "# The districts succumb\n",
     "<p style=\"border:2px solid black\"> </p>"
    ]
   },
@@ -258,8 +273,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-05-13T20:57:38.154Z"
+     "end_time": "2021-05-14T16:13:58.565654Z",
+     "start_time": "2021-05-14T16:13:58.008120Z"
     },
+    "hide_input": true,
     "scrolled": false
    },
    "outputs": [],
@@ -285,7 +302,7 @@
     "\n",
     "As we can see, we can first consider a person a Dane when one of their parents is *both* a Danish citizen *and* born in Denmark. Luckily, if you are a decent human being, [getting the citizenship is easy](https://uim.dk/arbejdsomrader/statsborgerskab/udenlandske-statsborgere/betingelser), and, once you get it, there is a good chance you will be able to keep it. For, as our Prime Minister Mette Frederiksen [puts it](https://www.stm.dk/statsministeren/indlaeg/var-det-ikke-for-de-internationale-konventioner-ville-vi-goere-tildelt-statsborgerskab-betinget/): *the international conventions unfortunately set a narrow framework for deprivation of citizenship*.\n",
     "\n",
-    "Luckily, me and my wife have managed to return from our vacation in Italy just in time for my daughters birth, so already her children might in the future be considered a true part of the Danish society (unless they end up in a refugee camp, in which case they will have to [manage by themselves](https://www.berlingske.dk/samfund/mette-frederiksen-vil-fortsat-ikke-hjaelpe-danske-boern-i-syrien-det-er))\n",
+    "Luckily, me and my wife have managed to return from our vacation in Italy just in time for my daughters birth, so already her children might in the future be considered a true part of the Danish society, if they only manage to steer free of [refugee camps](https://www.berlingske.dk/samfund/mette-frederiksen-vil-fortsat-ikke-hjaelpe-danske-boern-i-syrien-det-er).\n",
     "\n",
     "But has the situation always been this bad? Let's take a look at how the percentage of non-Danes has developed over time:"
    ]
@@ -295,20 +312,24 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-05-13T20:57:38.159Z"
-    }
+     "end_time": "2021-05-14T19:17:32.343818Z",
+     "start_time": "2021-05-14T19:17:08.856906Z"
+    },
+    "hide_input": true
    },
    "outputs": [],
    "source": [
     "show_pct_non_danes_over_time(\n",
     "    group='all',\n",
-    "    caption='Figure: ',\n",
+    "    caption=('Figure: Percentage of non-Danes in different district over time. '\n",
+    "             'Red color represents danger. As we see, most district are already '\n",
+    "             'orange, passing the threshold of 15 %'),\n",
     "    caption_y=-0.05,\n",
     "    margin=dict(r=0,\n",
     "                t=30,\n",
     "                l=0,\n",
     "                b=0),\n",
-    "#     range_color=(0, 100)\n",
+    "    range_color=(0, 25)\n",
     ")"
    ]
   },
@@ -318,7 +339,7 @@
    "source": [
     "We can see that in 1980 the world was a much better place, and there were very few people in Copenhagen holding a foreign passport. Back then, Vesterbro was the top-scorer at 9.6%. 40 years later, the percentage of non-Danes at Versterbro has risen to 18.1%. Therefore, if the trend continues at the rate of replacement of 8.5% in 40 years, there will be no Danes at Vesterbro in 2405. The situation, however, is much worse in Bispebjerg, where the percentage of foreigners has risen from 3.6% to 20.8% in the same period, leaving us with a prospect of Dane - free Bispebjerg already in 2203.\n",
     "\n",
-    "However, not all foreigners are equally bad. As we know, all con can be divided into two groups: western and non-western countries. Western ones are our friends and the non-western are not. Let's see, w:\n"
+    "Please note that in some places the same version of this map has been manipulated to tone down the danger by changing the color range to run from 0 to 100%, in which case the animation will look as follows:"
    ]
   },
   {
@@ -326,36 +347,52 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-05-13T20:57:38.274Z"
-    }
+     "end_time": "2021-05-14T19:29:52.963108Z",
+     "start_time": "2021-05-14T19:29:37.190810Z"
+    },
+    "hide_input": true
+   },
+   "outputs": [],
+   "source": [
+    "show_pct_non_danes_over_time(\n",
+    "    group='all',\n",
+    "    caption=('Figure: The manipulated version of the graph above, where the color range '\n",
+    "             'has been set to run from 0 to 100%. These kind of manipulations are common '\n",
+    "             'among those who want to tone<br>down the dangers of immigration.'),\n",
+    "    caption_y=-0.1,\n",
+    "    margin=dict(r=0,\n",
+    "                t=30,\n",
+    "                l=0,\n",
+    "                b=0),\n",
+    "    range_color=(0, 100)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, not all foreigners are equally bad. That's why we have divided them into two groups: Western and non-Western. Let's see where these groups concentrate their efforts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-14T19:38:33.758630Z",
+     "start_time": "2021-05-14T19:38:08.716793Z"
+    },
+    "hide_input": true,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "show_pct_non_danes_over_time(\n",
     "    group='western',\n",
-    "    caption=None,\n",
-    "    caption_y=-0.05,\n",
-    "    margin=dict(r=0,\n",
-    "                t=30,\n",
-    "                l=0,\n",
-    "                b=0),\n",
-    "    range_color=(0, 25)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2021-05-13T20:57:38.277Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "show_pct_non_danes_over_time(\n",
-    "    group='non-western',\n",
-    "    caption=None,\n",
+    "    caption=('Figure: Percentage of Western non-Danes in different district over time. '\n",
+    "             'Red color represents danger. As we see, the western immigrants are taking '\n",
+    "             'over central Copenhagen'),\n",
     "    caption_y=-0.05,\n",
     "    margin=dict(r=0,\n",
     "                t=30,\n",
@@ -369,8 +406,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sandbox\n",
+    "It seems that the western foreigners are taking over the central Copenhagen. But what about the non-Western?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-14T19:45:58.837635Z",
+     "start_time": "2021-05-14T19:45:43.512967Z"
+    },
+    "hide_input": true
+   },
+   "outputs": [],
+   "source": [
+    "show_pct_non_danes_over_time(\n",
+    "    group='non-western',\n",
+    "    caption=('Figure: Percentage of non-Western non-Danes in different district over time. '\n",
+    "             'Red color represents danger. As we see, the non-western immigrants are taking '\n",
+    "             'over Bispebjerg and<br>Brønshøj-Husum.'),\n",
+    "    caption_y=-0.1,\n",
+    "    margin=dict(r=0,\n",
+    "                t=30,\n",
+    "                l=0,\n",
+    "                b=0),\n",
+    "    range_color=(0, 25)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the non-Western immigrants are taking over Bispebjerg and Brønshøj-Husum. Which are kind of far away. So maybe it is not such a big problem after all?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Thank you\n",
     "<p style=\"border:2px solid black\"> </p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thank you for joining me in this quest to uncover the inconvenient truth about the upcoming dawn of the Danish nation, which has been brought to light thanks to the courage of one brave man: Martin Henriksen. So Martin, if you are reading this, I would like to use the occasion to express my deepest gratitude. On behalf of Denmark and all of us together: thank you."
    ]
   }
  ],
@@ -401,7 +485,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {
     "height": "calc(100% - 180px)",
     "left": "10px",
