--- a/website_main.ipynb
+++ b/website_main.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T16:13:50.993498Z",
-     "start_time": "2021-05-14T16:13:45.007892Z"
+     "end_time": "2021-05-14T23:02:14.231160Z",
+     "start_time": "2021-05-14T23:02:08.222835Z"
     },
     "hide_input": true
    },
@@ -20,8 +20,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T16:13:51.057329Z",
-     "start_time": "2021-05-14T16:13:50.996491Z"
+     "end_time": "2021-05-14T23:02:14.275044Z",
+     "start_time": "2021-05-14T23:02:14.234159Z"
     },
     "hide_input": true,
     "scrolled": true
@@ -138,8 +138,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T16:13:54.627921Z",
-     "start_time": "2021-05-14T16:13:51.060320Z"
+     "end_time": "2021-05-14T23:02:16.523935Z",
+     "start_time": "2021-05-14T23:02:14.278035Z"
     },
     "hide_input": true
    },
@@ -165,7 +165,7 @@
     }
    },
    "source": [
-    "The figure above shows that the fraction of Danes in Copenhagen has diminished from 78.3% in 2009 to 74.3% in 2020. Therefore, it seems that mr. Henriksen's might be well-grounded. We can also deduct through simple linear regression that if the trend continues at the current rate of replacement of 5 ***percentage points*** every 11 years, the Danes (as defined by mr. Henriksen) will have been replaced entirely in 2182, or around the time when I will be celebrating my 200<sup>th</sup> birthday."
+    "The figure above shows that the fraction of Danes in Copenhagen has diminished from 78.3% in 2009 to 74.3% in 2020. Therefore, it seems that mr. Henriksen's worries might be well-grounded. We can also deduct through simple linear regression that if the trend continues at the current rate of replacement of 5 ***percentage points*** every 11 years, the Danes (as defined by mr. Henriksen) will have been replaced entirely in 2182, or around the time when I will be celebrating my 200<sup>th</sup> birthday."
    ]
   },
   {
@@ -194,8 +194,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T16:13:57.745664Z",
-     "start_time": "2021-05-14T16:13:54.630911Z"
+     "end_time": "2021-05-14T23:02:21.891761Z",
+     "start_time": "2021-05-14T23:02:16.525927Z"
     },
     "hide_input": true
    },
@@ -215,7 +215,7 @@
     "hide_input": true
    },
    "source": [
-    "Hmm, to be completely honest, it doesn't look too good. Given the seriousness of mr. Henriksen's warning I was hoping we would be a bit closer to taking over control, but me and my Polish comrades come in at a miserable 6th place, and it seems that there is still some way to go before we get to the top. Also, after a thorough visual inspection of the graphs above, I must admit that the overtaking is not going as fast as I have imagined, and the population of the countries behind Denmark doesn't *really* seem to have grown from 2009 to 2020.\n",
+    "Hmm, to be completely honest, it doesn't look too good. Given the seriousness of mr. Henriksen's warning I was hoping we would be a bit closer to taking over control, but me and my Polish comrades come in at a miserable 6<sup>th</sup> place, and it seems that there is still some way to go before we get to the top. Also, after a thorough visual inspection of the graphs above, I must admit that the overtaking is not going as fast as I have imagined, and the population of the countries behind Denmark doesn't *really* seem to have grown from 2009 to 2020.\n",
     "\n",
     "However, since we are scientists, we can take a more detailed look at the situation in 2020. In the graph below, the exact quantities can be read off by hovering the mouse pointer over the bars."
    ]
@@ -225,8 +225,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T16:13:58.006125Z",
-     "start_time": "2021-05-14T16:13:57.747660Z"
+     "end_time": "2021-05-14T23:02:22.066292Z",
+     "start_time": "2021-05-14T23:02:21.893723Z"
     },
     "hide_input": true,
     "scrolled": false
@@ -246,9 +246,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results are truly discouraging: while Denmark sits on 74.29% on the population, the 2<sup>nd</sup> biggest country of origin (Pakistan) comes in at a measly 1.39%, while the Great Republic of Poland falls below 1% at 0.99%. That means that to even get up to 10% of the size of the Danes, we would have to join forces with the Pakistanis, Turks, Iraqis, Germans, Somalis, and Swedes, which might propose some challenges due to different traditions of celebrating Christmas. \n",
+    "The results are truly discouraging: while Denmark sits on 74.29% on the population, the 2<sup>nd</sup> biggest country of origin (Pakistan) comes in at a measly 1.39%, while the Great Republic of Poland falls below 1% at 0.99%. That means that to  get up to even 10% of the size of the Danes, we would have to join forces with the Pakistanis, Turks, Iraqis, Germans, Somalis, and Swedes, which might propose some challenges due to different traditions of celebrating Christmas. \n",
     "\n",
-    "Therefore, replacing the Danish population and taking over Copenhagen might be a more difficult task than initially assumed, mostly due to the challenges with maintaining the purity of the replacing group. Given the composition of the population in 2020, it is not unreasonable to fear that not only the Danish population, but also the Pakistani, Turkish, Iraqi, German, Polish, Somali, Moroccan, Swedish, and Lebanese populations in Copenhagen are at risk of being replaced by some combination of the mentioned nationalities, or even other countries.\n",
+    "Therefore, replacing the Danish population and taking over Copenhagen might be a more difficult task than initially assumed, not least due to the challenges with maintaining the purity of the replacing group. Given the composition of the population in 2020, it is not unreasonable to fear that not only the Danish population, but also the Pakistani, Turkish, Iraqi, German, Polish, Somali, Moroccan, Swedish, and Lebanese populations in Copenhagen are at risk of being replaced by some combination of the mentioned nationalities, or even other countries.\n",
     "\n",
     "So, is all hope lost? Is there nothing we can do? What about the districts? Isn't there a brave area that is putting up a good fight? Let's take a look at the development over the years."
    ]
@@ -273,8 +273,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T16:13:58.565654Z",
-     "start_time": "2021-05-14T16:13:58.008120Z"
+     "end_time": "2021-05-14T23:02:23.124520Z",
+     "start_time": "2021-05-14T23:02:22.068255Z"
     },
     "hide_input": true,
     "scrolled": false
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems that Vanløse is putting up a good fight with 88.2% of the citizens holding a Danish passport. Østerbro comes in at a strong second with 85.4%, Amager Øst is third with 84.8%, and Nørrebro fourth with 84.5% Danish citizens. So, since [Nørrebro is already lost](https://www.berlingske.dk/kommentatorer/pernille-vermund-noerrebro-er-tabt), that means we only have three districts left in Copenhagen where there is still might be shred of hope for the Danish nation: **Vanløse**, **Østerbro**, and **Amager Øst**.\n",
+    "It seems that Vanløse is putting up a good fight with 88.2% of the citizens holding a Danish passport. Østerbro comes in at a strong second with 85.4%, Amager Øst is third with 84.8%, and Nørrebro fourth with 84.5% Danes. So, since [Nørrebro is already lost](https://www.berlingske.dk/kommentatorer/pernille-vermund-noerrebro-er-tabt), that means we only have three districts left in Copenhagen where there still might be a shred of hope for the Danish nation: **Vanløse**, **Østerbro**, and **Amager Øst**.\n",
     "\n",
     "But wait a second. How do these numbers add up to the 23.7% immigrants that mr. Henriksen was talking about? Well, it seems that some people are simply manipulating the statistics to make the situation look less dramatic than it really is: in the graph above, we are counting all Danish *citizens* as Danes. But let's be honest: we all know that they are not *really* Danes. That's why we in Denmark have official ways to categorize the citizens that better reflect the reality, and otherwise in no way resemble something we have seen before:\n",
     "\n",
@@ -302,7 +302,7 @@
     "\n",
     "As we can see, we can first consider a person a Dane when one of their parents is *both* a Danish citizen *and* born in Denmark. Luckily, if you are a decent human being, [getting the citizenship is easy](https://uim.dk/arbejdsomrader/statsborgerskab/udenlandske-statsborgere/betingelser), and, once you get it, there is a good chance you will be able to keep it. For, as our Prime Minister Mette Frederiksen [puts it](https://www.stm.dk/statsministeren/indlaeg/var-det-ikke-for-de-internationale-konventioner-ville-vi-goere-tildelt-statsborgerskab-betinget/): *the international conventions unfortunately set a narrow framework for deprivation of citizenship*.\n",
     "\n",
-    "Luckily, me and my wife have managed to return from our vacation in Italy just in time for my daughters birth, so already her children might in the future be considered a true part of the Danish society, if they only manage to steer free of [refugee camps](https://www.berlingske.dk/samfund/mette-frederiksen-vil-fortsat-ikke-hjaelpe-danske-boern-i-syrien-det-er).\n",
+    "Luckily, me and my wife have managed to return from our vacation in Italy just in time for my daughters birth, so that already her children might in the future be considered a true part of the Danish society, if they only manage to steer free of [refugee camps](https://www.berlingske.dk/samfund/mette-frederiksen-vil-fortsat-ikke-hjaelpe-danske-boern-i-syrien-det-er).\n",
     "\n",
     "But has the situation always been this bad? Let's take a look at how the percentage of non-Danes has developed over time:"
    ]
@@ -312,8 +312,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T19:17:32.343818Z",
-     "start_time": "2021-05-14T19:17:08.856906Z"
+     "end_time": "2021-05-14T23:02:37.340549Z",
+     "start_time": "2021-05-14T23:02:23.128510Z"
     },
     "hide_input": true
    },
@@ -339,7 +339,7 @@
    "source": [
     "We can see that in 1980 the world was a much better place, and there were very few people in Copenhagen holding a foreign passport. Back then, Vesterbro was the top-scorer at 9.6%. 40 years later, the percentage of non-Danes at Versterbro has risen to 18.1%. Therefore, if the trend continues at the rate of replacement of 8.5% in 40 years, there will be no Danes at Vesterbro in 2405. The situation, however, is much worse in Bispebjerg, where the percentage of foreigners has risen from 3.6% to 20.8% in the same period, leaving us with a prospect of Dane - free Bispebjerg already in 2203.\n",
     "\n",
-    "Please note that in some places the same version of this map has been manipulated to tone down the danger by changing the color range to run from 0 to 100%, in which case the animation will look as follows:"
+    "Also, please be aware that in some places a version of this map has been manipulated to tone down the dangers of immigration by changing the color range to run from 0 to 100%, in which case the animation will look as follows:"
    ]
   },
   {
@@ -347,8 +347,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T19:29:52.963108Z",
-     "start_time": "2021-05-14T19:29:37.190810Z"
+     "end_time": "2021-05-14T23:02:52.519739Z",
+     "start_time": "2021-05-14T23:02:37.347530Z"
     },
     "hide_input": true
    },
@@ -372,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, not all foreigners are equally bad. That's why we have divided them into two groups: Western and non-Western. Let's see where these groups concentrate their efforts."
+    "However, not all foreigners are equally bad. That's why we have divided them into two groups: Western and non-Western. Let's see where these groups concentrate their Dane-replacing efforts."
    ]
   },
   {
@@ -380,8 +380,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T19:38:33.758630Z",
-     "start_time": "2021-05-14T19:38:08.716793Z"
+     "end_time": "2021-05-14T23:03:07.127140Z",
+     "start_time": "2021-05-14T23:02:52.522733Z"
     },
     "hide_input": true,
     "scrolled": false
@@ -414,8 +414,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T19:45:58.837635Z",
-     "start_time": "2021-05-14T19:45:43.512967Z"
+     "end_time": "2021-05-14T23:03:21.900955Z",
+     "start_time": "2021-05-14T23:03:07.130127Z"
     },
     "hide_input": true
    },
@@ -439,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the non-Western immigrants are taking over Bispebjerg and Brønshøj-Husum. Which are kind of far away. So maybe it is not such a big problem after all?"
+    "Hmm, non-Western immigrants are mostly taking over Bispebjerg and Brønshøj-Husum. Which are kind of far away. So maybe it is not such a big problem after all?"
    ]
   },
   {
