--- a/explainer_notebook.ipynb
+++ b/explainer_notebook.ipynb
@@ -170,8 +170,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T14:11:30.962657Z",
-     "start_time": "2021-05-14T14:11:30.790599Z"
+     "end_time": "2021-05-15T06:55:56.164209Z",
+     "start_time": "2021-05-15T06:55:46.280576Z"
     }
    },
    "outputs": [],
@@ -263,8 +263,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T14:11:37.052815Z",
-     "start_time": "2021-05-14T14:11:36.829382Z"
+     "end_time": "2021-05-15T06:55:56.495258Z",
+     "start_time": "2021-05-15T06:55:56.166137Z"
     },
     "scrolled": true
    },
@@ -286,8 +286,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T14:11:38.558165Z",
-     "start_time": "2021-05-14T14:11:38.538225Z"
+     "end_time": "2021-05-15T06:55:56.564074Z",
+     "start_time": "2021-05-15T06:55:56.504233Z"
     },
     "scrolled": false
    },
@@ -309,8 +309,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T14:12:55.833357Z",
-     "start_time": "2021-05-14T14:12:55.815406Z"
+     "end_time": "2021-05-15T06:55:56.616931Z",
+     "start_time": "2021-05-15T06:55:56.570057Z"
     }
    },
    "outputs": [],
@@ -333,8 +333,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T14:13:33.102697Z",
-     "start_time": "2021-05-14T14:13:33.070785Z"
+     "end_time": "2021-05-15T06:55:56.658821Z",
+     "start_time": "2021-05-15T06:55:56.619924Z"
     }
    },
    "outputs": [],
@@ -364,8 +364,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T14:16:00.756044Z",
-     "start_time": "2021-05-14T14:16:00.493716Z"
+     "end_time": "2021-05-15T06:55:57.153498Z",
+     "start_time": "2021-05-15T06:55:56.663808Z"
     },
     "scrolled": false
    },
@@ -499,8 +499,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T16:31:10.846739Z",
-     "start_time": "2021-05-14T16:31:07.930371Z"
+     "end_time": "2021-05-15T06:55:59.824355Z",
+     "start_time": "2021-05-15T06:55:57.162473Z"
     },
     "hide_input": false,
     "scrolled": false
@@ -543,8 +543,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T17:36:45.694892Z",
-     "start_time": "2021-05-14T17:36:28.162450Z"
+     "end_time": "2021-05-15T06:56:17.376419Z",
+     "start_time": "2021-05-15T06:55:59.827347Z"
     }
    },
    "outputs": [],
@@ -573,8 +573,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-14T17:30:30.612953Z",
-     "start_time": "2021-05-14T17:30:16.168748Z"
+     "end_time": "2021-05-15T06:56:36.415495Z",
+     "start_time": "2021-05-15T06:56:17.379406Z"
     }
    },
    "outputs": [],
@@ -611,15 +611,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project has turned out huge when measured with respect to this course's ECTS, and it became apparent to me relatively quickly that I will not be able process and analyze all the data which I have gathered before the May 14th regardless of how much time I would allocate to the task, let alone in the 6 working days being the time norm. In fact, now, after more than 20 full working days, I still feels like I'm just getting started.\n",
+    "This project has turned out huge when measured with respect to this course's ECTS, and it became apparent to me relatively quickly that I will not be able to process and analyze all the data which I have gathered before May 14th regardless of how much time I would allocate to the task, let alone in the 6 working days being the time norm. In fact, now, after more than 20 full working days, I still feel like I'm just getting started.\n",
     "\n",
-    "My strategy was to focus on getting solid, high quality data, and only proceed with the rest of the project when that part was in place. This approach would give me an opportunity to work on an [important part](https://www.datanami.com/2020/07/06/data-prep-still-dominates-data-scientists-time-survey-finds/) [6] of data science which we have not had many opportunities to work with throughout the semester, and, at the same time, lay a good foundation for future work.\n",
+    "My strategy was therefore to focus on getting solid, high quality data, and to only proceed with the rest of the project when that part was in place. I was hoping that approach would give me an opportunity to work on an [important part](https://www.datanami.com/2020/07/06/data-prep-still-dominates-data-scientists-time-survey-finds/) [6] of data science which we have not had many opportunities to work with during the semester, and, at the same time, lay a good foundation for future work.\n",
     "\n",
-    "I have therefore invested a lot of time into gathering data, which had to be done by hand due to lack of an API, and even more so into cleaning and processing. The result is a dataset which I am very happy with, and would like to continue to work on. I am also very satisfied with the technical documentation, which makes it possible to trace every step taken in the process of cleaning, organizing, processing, and analyzing the data.\n",
+    "I have therefore invested a lot of time into gathering data, which had to be done by hand due to lack of an API, and even more so into cleaning and processing. The result is a dataset which I am very happy with and would like to continue to work on. I am also very satisfied with the technical documentation, which makes it possible to trace every step taken in the process of cleaning, organizing, processing, and analyzing the data.\n",
     "\n",
-    "In this project, only a little part of the gathered data has been analyzed, but even that has led to some interesting insights about the composition of the population of Copenhagen. I am especially happy about being able to show that when politicians like mr. Henriksen preach about the dangers of foreigners constituting a given percentage of the population in a given area, they tend to present the foreigners as one solid group determined to do you no good, whereas the reality is that the foreign group can consist of hundreds of different nationalities with very little in common. But that being said, there is still so much more to be done, e.g. I haven't even started investigating the relationships between different quantities, which could lead to very interesting insights.\n",
+    "In this project, only a little part of the gathered data has been analyzed, but even that has led to some interesting insights about the composition of the population of Copenhagen. I am especially happy about being able to show that when politicians like mr. Henriksen talk about the foreigners, they tend to present them as one solid group determined to do you no good, whereas the reality is that this group can consist of hundreds of different nationalities with very little in common. But that being said, there is still so much more to be learned, e.g. I haven't even started investigating the relationships between different quantities, which could lead to very interesting insights.\n",
     "\n",
-    "As mentioned before, I have chosen not make this project a tour of all the tools and techniques which we have worked with using the semester, as I have already demonstrated my understanding of them in the two assignments over during the semester, and using them for no other reason than to show them to my teachers did not make much sense to me. For that reason, my project is heavily oriented towards data processing, and less towards the analysis. I do, however, intend to pursue the analysis part when this semester ends, and I hope some of you can also find the data I have gathered about Copenhagen for your own research."
+    "As mentioned before, I have chosen not make this project a tour of all the tools and techniques which we have worked with during the semester, as I have already demonstrated my understanding of them in the two previous assignments, and using them for no other reason than to show to my teachers that I can did not make much sense to me. Therefore, my project is heavily oriented towards data cleaning and processing, and less towards the analysis. I do, however, intend to pursue the analysis part to a much greater extend when this semester ends, and I hope some of you can use the data I have gathered about Copenhagen for your own research."
    ]
   },
   {
